# rime

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: release-rime-ingest.yml  tests-docker.yml  tests-no-auth.yml
deploy/: README.md  docker-compose.app-debug.yml  docker-compose.app-only.yml  docker-compose.app-public.yml  docker-compose.app.yml  docker-compose.auth.yml  docker-compose.base.yml  docker-compose.server-http.yml  docker-compose.services.yml  init-db.sh  start-debug-production.sh  start-dev.sh  start-production-anon.sh  start-production-auth.sh  start-production.sh  stop-dev.sh  stop-production.sh
deploy/examples/: application-configs.example.yml  application_credentials.example.json  edge.env.example  server-credentials.example.yml
deploy/sensor_configs/: .gitignore  template.yaml
deploy/sensor_configs/dragino/: template_dragino.lsn50v2-s31.yaml
deploy/sensor_configs/eltek/: template_eltek.datalogger.yaml
deploy/sensor_configs/kinemetrics/: template_kinemetrics.etna2.yaml
deploy/sensor_configs/milesight/: template_milesight.am103l.yaml  template_milesight.am308l.yaml
deploy/sensor_configs/netatmo/: template_netatmo.nws03.yaml
docs/: roadmap.md  sensor-config-templates.md
docs/imgs/: high-level-architecture.drawio  process-payload.drawio  process-payload.drawio.drawio  rime-architecture.drawio  transport-class-diagram.drawio
docs/protocols/: rime-http-ingest-v1.md
docs/tapes/: application-setup.tape  config-setup.tape  credentials-input.tape  manage.tape  start.tape
scripts/: download_multicare_temperature.py
src/rime/: README.md  config.py  loggers.py  main.py  monitor.py  paths.py
src/rime/cli/: applications.py  commands.py  menu.py  system_checks.py
src/rime/ctrl/: __main__.py  api.py  reconciler.py  watcher.py
src/rime/frost/: README.md  __init__.py  bridges.py  get.py  helpers.py  orchestrators.py  post.py  sanitization.py  types.py  writers.py
src/rime/ingest/: __main__.py  api.py  runtime.py
src/sensorthings_utils/: config.py  connections.py  frost.py  main.py  monitor.py  paths.py
web/rime/: app.js  index.html  styles.css
web/rime/js/: api.js  (+7 more)
(+188 files in other folders)
