# Dev-only root manifest for running monorepo integration tests.
# Deployable packages are built from their own directories (e.g. packages/rime-ingest/).

[project]
name = "rime-dev"
version = "0.7.0"
requires-python = ">=3.12"
dependencies = [
    "rime-ingest",
]

[tool.uv.sources]
rime-ingest = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]

[tool.uv.workspace]
members = ["packages/rime-ingest", "packages/rime-server-http"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["packages/rime-ingest/src"]
filterwarnings = [
    "ignore:The 'User' class is no longer maintained by Netatmo:DeprecationWarning",
    "ignore:The 'DeviceList' class was renamed 'WeatherStationData':DeprecationWarning",
    "ignore:The 'WelcomeData' class was renamed 'HomeData':DeprecationWarning",
]
markers = [
    "slow: tests which take long",
    "real: makes calls to real resources (APIs, servers, databases, etc.)",
    "online: tests which require the test broker to be online",
    "docker: tests that spin up ephemeral Docker containers",
]
